@@ -6,7 +6,6 @@ import com.google.common.math.DoubleMath;
 import java.util.List;
 import java.util.function.Function;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -23,7 +22,7 @@ public class EntropyCalculator implements ImpurityCalculator {
      */
     @Override
     public <K, V> double impurity(K value, Supplier<Stream<Function<K, V>>> splitData) {
-        List<V> labels = splitData.get().map(x -> x.apply(value)).distinct().collect(Collectors.toList());
+        List<V> labels = splitData.get().map(x -> x.apply(value)).distinct().toList();
         if (labels.size() > 1) {
             // TODO this can be done faster by comparing each all at once
             return labels.stream().mapToDouble(l -> {
